# spectroterm

./: .gitignore  .ruff.toml  Pipfile  README.md  build.py  main.py  pyproject.toml  setup.py  spectrum_cython.c  spectrum_cython.pyx
.github/workflows/: build-and-release.yml
