[project]
name = "spectroterm"
version = "0.4.4"
description = "Curses based terminal spectrum analyzer for currently playing audio."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.1.2",
    "nuitka>=2.7.12",
    "numpy>=2.3.1",
    "pyfftw>=0.15.0",
    "pyinstaller>=6.14.2",
    "soundcard>=0.4.4",
]
