[project]
name = "spectroterm"
version = "0.5.3"
description = "Curses based terminal spectrum analyzer for currently playing audio."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.1.4",
    "nuitka>=2.8.3",
    "numpy>=2.3.4",
    "pyfftw>=0.15.0",
    "pyinstaller>=6.16.0",
    "soundcard>=0.4.5",
    "windows-curses>=2.4.1 ; sys_platform == 'win32'",
]
